# momba

./: .buildinfo  .gitignore  .gitlab-ci.yml  CNAME  Cargo.toml  LICENSE  LICENSE-MIT  MANIFEST.in  Pipfile  README.md  README.rst  deploy.sh  genindex.html  index.html  momba.code-workspace  objects.inv  py-modindex.html  pyproject.toml  release.py  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  (+1 more)
engine/: .gitignore  Cargo.toml  README.md  pyproject.toml  rust-toolchain
engine/crates/: README.md
engine/crates/arc-arena/: Cargo.toml
engine/crates/arc-arena/src/: lib.rs
engine/crates/clock-zones/: Cargo.toml  README.md
engine/crates/clock-zones/src/: bounds.rs  clocks.rs  constants.rs  lib.rs  storage.rs  zones.rs
engine/crates/momba-diagnosis/: Cargo.toml
engine/crates/momba-explicit/: Cargo.toml  README.md  todos.md
engine/crates/momba-explicit/src/: compiler.rs  datatypes.rs  engine.rs  exhaustive.rs  lib.rs  main.rs  params.rs  state_allocator.rs  values.rs  vm.rs
engine/crates/momba-explicit/src/compiler/: assignments.rs  compiled.rs  expressions.rs  functions.rs  scope.rs
engine/crates/momba-explicit/src/datatypes/: idxvec.rs
engine/crates/momba-explicit/src/engine/: buffers.rs  store.rs
engine/crates/momba-explicit/src/exhaustive/: workers.rs
engine/crates/momba-explicit/src/values/: layout.rs  memory.rs  types.rs  units.rs
engine/crates/momba-explicit/src/vm/: evaluate.rs
engine/crates/momba-explore/: Cargo.toml  README.md
engine/crates/momba-explore/src/: compiled.rs  explore.rs  lib.rs  main.rs  model.rs  network.rs  time.rs
engine/crates/momba-explore/src/explore/: actions.rs  compiled.rs  evaluate.rs  external.rs  mod.rs
engine/crates/momba-explore/src/model/: actions.rs  expressions.rs  mod.rs  network.rs  references.rs  types.rs  values.rs
engine/crates/momba-explore/src/simulate/: mod.rs
engine/crates/momba-model/: Cargo.toml  README.md  sidex.toml
engine/crates/momba-model/schemas/: actions.sidex  automata.sidex  constants.sidex  expressions.sidex  functions.sidex  models.sidex  types.sidex  values.sidex  variables.sidex
engine/crates/momba-model/src/: lib.rs
engine/crates/momba-sidekick/: Cargo.toml  README.md
engine/crates/momba-sidekick/src/: _generic.rs  custom_oracles.rs  lib.rs  main.rs  nn_oracle.rs  simulate.rs
engine/crates/momba-sidekick/src/nn_oracle/: generic.rs
engine/crates/momba-simulator/: Cargo.toml  README.md
engine/crates/momba-simulator/src/: custom_oracles.rs  main.rs  nn_oracle.rs  sched_sampler.rs  simulate.rs
engine/crates/momba-simulator/src/nn_oracle/: generic.rs
engine/crates/momba-tools/: Cargo.toml
engine/crates/momba-vm/: Cargo.toml  README.md
engine/crates/momba-vm/src/: compiled.rs  main.rs  model.rs  types.rs  values.rs
engine/crates/pyo3-generic-wrap/: Cargo.toml
engine/crates/pyo3-generic-wrap/example/: Cargo.toml  simple_test.py
engine/crates/pyo3-generic-wrap/example/src/: lib.rs
engine/crates/pyo3-generic-wrap/src/: lib.rs
engine/crates/robust-diagnosis/: Cargo.toml  README.md
engine/crates/robust-diagnosis/src/: external.rs  main.rs  parameters.rs
engine/crates/robust-diagnosis/src/commands/: diagnose.rs  generate.rs  mod.rs
engine/crates/robust-diagnosis/src/robust/: generate.rs  graph.rs  merged.rs  mod.rs  observer.rs  space.rs
engine/crates/save/src/: nn_oracle.rs  simulate.rs
engine/crates/synthsens-verify/: Cargo.toml
engine/crates/synthsens-verify/src/: main.rs
engine/crates/vts-synth/: Cargo.toml
engine/crates/vts-synth/models/: coffee-machine.fts.xml  coffee-machine2.fts.xml  email.fm  email.fts.xml  simple.fts.xml
engine/crates/vts-synth/models/vibes/: README.md  aerouc5.fm  aerouc5.fts.xml  aerouc5.out  aerouc5.tvl  claroline-pow.fts.xml  claroline-reduced.fm  claroline.fm  claroline.out  claroline.tvl  cpterminal.fm  cpterminal.fts.xml  cpterminal.out  cpterminal.tvl  minepump.fm  minepump.fts.xml  minepump.out  minepump.tvl  svm.fm  svm.fts.xml  svm.out  svm.tvl
engine/crates/vts-synth/src/: algorithms.rs  cudd.rs  domains.rs  lattice.rs  logic.rs  main.rs  ts.rs  ts_traits.rs
engine/crates/vts-synth/src/algorithms/: minimize.rs
engine/crates/vts-synth/src/frontends/: mod.rs  vibes.rs  yaml.rs
engine/crates/vts-synth/src/logic/: propositional.rs
engine/crates/vts-synth/src/synthesis/: confmon.rs  mod.rs
engine/crates/vts-synth/src/ts/: algorithms.rs  output.rs  traits.rs  transposed.rs  types.rs
engine/momba_engine/: __init__.py
engine/src/: actions.rs  destinations.rs  explorer.rs  lib.rs  states.rs  time.rs  transitions.rs  values.rs  zones.rs
engine/tests/: test_zones.py
examples/conveyor-belt/: .gitignore  README.md  conveyor_belt.py  pyproject.toml  run-all-experiments.sh
examples/conveyor-belt/conveyor_belt/: __init__.py  __main__.py  builder.py
examples/conveyor-belt/conveyor_belt/experiments/: __init__.py  boxplot.py  history_bound.py  latency_jitter.py  runner.py  scalability.py
examples/conveyor-belt/models/: short_two_sensors.json
examples/conveyor-belt/parameters/diagnosis/: high_latency_and_jitter copy.toml  high_latency_and_jitter.toml  high_latency_and_realistic_jitter.toml  low_latency_and_jitter.toml
examples/conveyor-belt/parameters/generate/: inject_friction_after_13.toml  inject_friction_after_2.toml  inject_friction_with_rate_0_000005.toml  inject_sporadic_after_13.toml  inject_sporadic_after_2.toml
examples/conveyor-belt/scenarios/: long_two_sensors.toml  short_two_sensors.toml
examples/racetrack/: .gitignore  check.py  compile.py  engine.py  game.html  index.html  model.html  pyproject.toml  quickstart.html  race2momba.py  racetrack.py  simulator.py  translate.py
examples/racetrack/game/: index.html
examples/racetrack/model/: index.html
examples/racetrack/quickstart/: index.html
examples/racetrack/racetrack/: __init__.py  __main__.py  _ipython.py  console.py  model.py  svg.py
examples/racetrack/racetrack/tracks/: __init__.py  maze.track  river-deadend-narrow.track
examples/racetrack/tracks/: barto-small.track  tiny.track
(+2616 files in other folders)
