[workspace]
members = [
    "engine",
    "engine/crates/clock-zones",
    "engine/crates/momba-explore",
    "engine/crates/momba-sidekick",
    "engine/crates/momba-diagnosis",
    "engine/crates/momba-model",
    "engine/crates/pyo3-generic-wrap",
    "engine/crates/pyo3-generic-wrap/example",
    "engine/crates/robust-diagnosis",
]
exclude = ["private"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
