[tool.poetry]
name = "momba"
version = "0.6.7"
description = "A Python library for quantitative models."
authors = [
    "Maximilian Köhl <koehl@cs.uni-saarland.de>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/koehlma/momba.git"
homepage = "https://momba.dev/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
click = { version = "^8.0", optional = true }
mxu = "^0.0.6"
immutables = "^0.16"
docker = { version = "^5.0.2", optional = true }
torch = { version = "^1.8.0", optional = true }
gym = { version = "^0.21.0", optional = true }
# `release.py` replaces "*" with the precise version
momba_engine = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
#pytest = "^5.2"
#pytest-cov = "^2.8.1"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
pep8-naming = "*"
# mypy = "*"
sphinx = "^4.4.0"
sphinx-autobuild = "^2020.9.1"
jupyter_sphinx = "^0.3.2"
maturin = "0.14"
myst-parser = "^0.16.1"
tomlkit = "^0.7.0"
matplotlib = "^3.3.4"
ipympl = "^0.6.3"
sympy = "^1.7.1"
sphinx-book-theme = "^0.2.0"

[tool.poetry.scripts]
momba-moml = "momba.moml.__main__:main"
momba-explicit = "momba.explicit.__main__:main"
momba-jani = "momba.jani.__main__:main"
# momba-conv = "momba.conv.__main__:main"

[tool.poetry.extras]
cli = ["click"]
engine = ["momba_engine"]
docker = ["docker"]
gym = ["torch", "gym"]
all = ["click", "momba_engine", "docker", "torch", "gym"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
