[project]
name = "momba"
version = "0.6.10"
description = "A Python library for quantitative models."
authors = [
    { name = "Maximilian Köhl", email = "koehl@cs.uni-saarland.de" }
]
license = { file = "LICENSE-MIT" }
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = [
    "mxu>=0.0.6",
    "immutables>=0.20",
    "momba-engine==0.6.10",
]

[project.urls]
repository = "https://github.com/koehlma/momba.git"
homepage = "https://momba.dev/"

[project.scripts]
momba-moml = "momba.moml.__main__:main"

[project.optional-dependencies]
gym = [
    "gymnasium>=0.29.1",
    "torch>=2.4.0",
]
docker = [
    "docker>=7.1.0",
]
cli = [
    "click>=8.1.7",
]
engine = []  # For compatibility, engine is included by default now.
all = [
    "gymnasium>=0.29.1",
    "torch>=2.4.0",
    "docker>=7.1.0",
    "click>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter-sphinx>=0.5.3",
    "mypy>=1.11.0",
    "myst-parser>=3.0.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-book-theme>=1.1.3",
    "sphinx>=7.1.2",
]

[tool.rye.scripts]
build-docs = { cmd = ["sphinx-build", "-b", "dirhtml", "docs", "build/docs"] }
serve-docs = { cmd = ["sphinx-autobuild", "docs", "build/docs"] }
check-types = { cmd = ["mypy", "momba", "tests"] }
run-tests = { cmd = ["pytest", "tests"] }

[tool.rye.workspace]
members = ["engine"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["momba"]
