[package]
name = "momba_engine"
version = "0.5.5"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "A Python package supercharging Momba with computing capabilities."
repository = "https://github.com/koehlma/momba"
license = "MIT"
categories = ["algorithms", "data-structures", "science"]
publish = false

[lib]
name = "momba_engine"
crate-type = ["cdylib"]

[dependencies]
clock-zones = { path = "./crates/clock-zones" }
momba-explore = { path = "./crates/momba-explore", version = "^0.1.0" }
pyo3-generic-wrap = { path = "./crates/pyo3-generic-wrap" }
serde_json = "^1.0.60"
ordered-float = "^2.0.1"
downcast-rs = "^1.2.0"
hashbrown = "*"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]