[tool.poetry]
name = "conveyor_belt"
version = "0.1.0"
description = "Conveyor belt model and experiments for robust diagnosis."
authors = [
    "Maximilian Köhl <koehl@cs.uni-saarland.de>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/koehlma/momba.git"
homepage = "https://momba.dev/examples/racetrack/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
colorama = "^0.4.4"
tomlkit = "^0.7.0"
momba = { version = "^0.6.6", extras = ["engine"] }

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
