[package]
name = "clock-zones"
version = "0.1.1"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "A library for handling clock zones."
repository = "https://github.com/koehlma/momba"
license = "MIT"
documentation = "https://docs.rs/clock-zones"
categories = ["algorithms", "data-structures", "science"]

[features]
default = ["bigint", "rational"]
bigint = ["num-traits", "num-bigint"]
rational = ["num-traits", "num-rational"]

[dependencies]
num-traits = { version = "0.2.12", optional = true }
num-bigint = { version = "0.3.0", optional = true }
num-rational = { version = "0.3.0", optional = true }
