[package]
name = "clock-zones"
version = "0.4.1"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "A library for handling clock zones."
repository = "https://github.com/koehlma/momba"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/clock-zones"
categories = ["algorithms", "data-structures", "science"]

[features]
default = ["float"]
float = ["ordered-float"]

[dependencies]
ordered-float = { version = "^3.2", optional = true }
