[package]
name = "momba-diagnosis"
version = "0.1.0"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "A command line tool directly exposing some model related functionality."
repository = "https://github.com/koehlma/momba"
license = "MIT"
categories = ["science"]

[dependencies]
