[package]
name = "momba-explicit"
description = "Explicit state space exploration engine for quantitative models."
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
hashbrown = { version = "0.13.2", features = ["raw"] }
bitvec = "1.0.1"
thiserror = "1"
parking_lot = "0.12"
momba-model = { path = "../momba-model" }
# Required only for the prototypical CLI.
clap = { version = "4.2.2", features = ["derive"] }  
once_cell = "1.17.1"
fxhash = "0.2.1"
bumpalo = "3.12.1"
rayon = "1.7.0"
crossbeam-deque = "0.8.3"
crossbeam = "0.8.2"

[features]
statistics = []

[profile.release]
debug = true
