[package]
name = "momba-explore"
version = "0.1.0"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "State space exploration for Momba models."
repository = "https://github.com/koehlma/momba"
license = "MIT"
documentation = "https://docs.rs/momba-explore"
categories = ["algorithms", "data-structures", "science"]

[dependencies]
clock-zones = { path = "../clock-zones", version = "0.1.1" }
clap = { version = "3.0.0-beta.2", optional = true }
rayon = "1.5"
indexmap = { version = "^1.6.1", features = ["serde"] }
serde = { version = "^1.0.118", features = ["derive"] }
serde_json = "^1.0.60"
ordered-float = { version = "^2.0.1", features = ["serde"] }
itertools = "0.9.0"
fnv = "^1.0.7"

[features]
default = ["cli"]
cli = ["clap"]