[package]
name = "momba-explore"
version = "0.1.1"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "State space exploration engine for PTAs and MDPs augmented with variables."
repository = "https://github.com/koehlma/momba"
license = "MIT"
documentation = "https://docs.rs/momba-explore"
categories = ["algorithms", "data-structures", "science"]

[dependencies]
clock-zones = { path = "../clock-zones", version = "*" }
rayon = "1.5"
indexmap = { version = "^1.6.1", features = ["serde"] }
serde = { version = "^1.0.118", features = ["derive"] }
serde_json = "^1.0"
num-traits = "^0.2.12"
ordered-float = { version = "^2.0.1", features = ["serde"] }
itertools = "0.9.0"
rand = "^0.8.1"
