[package]
name = "momba-sidekick"
version = "0.1.0"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "A command line tool directly exposing some model related functionality."
repository = "https://github.com/koehlma/momba"
license = "MIT"
categories = ["science"]

[dependencies]
clock-zones = { path = "../clock-zones", version = "^0.1.3" }
momba-explore = { path = "../momba-explore", version = "^0.1.0" }
clap = "3.0.0-beta.2"
serde_json = "^1.0.60"
fnv = "^1.0.7"
hashbrown = "^0.3"
rand = "^0.8.1"
