[package]
name = "momba-sidekick"
version = "0.1.0"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "A command line tool directly exposing some model related functionality."
repository = "https://github.com/koehlma/momba"
license = "MIT"
categories = ["science"]

[dependencies]
clock-zones = { path = "../clock-zones", version = "*" }
momba-explore = { path = "../momba-explore", version = "^0.1.0" }
clap = "4.3.4"
serde_json = "^1.0.60"
hashbrown = "^0.11.2"
clap_derive = "4.3.2"
