[package]
name = "momba-simulator"
version = "0.1.0"
authors = ["Nazareno Garagiola <ngaragiola430@mi.unc.edu.ar>"]
edition = "2021"
description = "A library that provides simulation capacities to momba"
repository = "https://github.com/koehlma/momba"
license = "MIT"
categories = ["science"]

[dependencies]
clock-zones = { path = "../clock-zones", version = "*" }
momba-explore = { path = "../momba-explore", version = "^0.1.0" }
clap = "3.0.0-beta.2"
serde_json = "^1.0.60"
hashbrown = "^0.11.2"
rand = "^0.8.1"
rayon = "1.7.0"
serde = "1.0.160"
tch = "0.11.0"
indicatif = "0.17.4"
ahash = "0.8.3"
