[package]
name = "momba-tools"
version = "0.1.0"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
description = "Command line tools."
repository = "https://github.com/koehlma/momba"
license = "MIT"
documentation = "https://docs.rs/momba-tools"
categories = ["algorithms", "data-structures", "science"]
publish = false

[dependencies]
momba-explore = { path = "../momba-explore" }
clap = "3.0.0-beta.2"
serde_json = "^1.0.60"
fnv = "^1.0.7"
hashbrown = "0.3"
