[package]
name = "robust-diagnosis"
version = "0.1.0"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"

[dependencies]
clock-zones = { path = "../clock-zones" }
momba-explore = { path = "../momba-explore" }
serde = { version = "^1.0.118", features = ["derive"] }
ordered-float = { version = "^2.0.1", features = ["serde"] }
indexmap = "^1.6.1"
clap = "^3.0.0-beta.2"
serde_json = "^1.0.60"
im = "^15.0.0"
hashbrown = "^0.3"
rand = "^0.8.1"
rand_distr = "^0.4.0"
toml = "^0.5.8"
anyhow = "1.0"

[profile.dev]
opt-level = 3
codegen-units = 16