[package]
name = "synthsens-verify"
version = "0.1.0"
authors = ["Maximilian Köhl <mail@koehlma.de>"]
edition = "2018"

[dependencies]
clock-zones = { path = "../clock-zones", version = "^0.1.3" }
momba-explore = { path = "../momba-explore", version = "^0.1.0" }
clap = "3.0.0-beta.2"
serde_json = "^1.0.60"
hashbrown = "^0.11.2"
im = "^15.0.0"