[package]
name = "vts-synth"
description = "VTS synthesis tool."
version = "0.1.0"
edition = "2021"
publish = false

[features]
disable-determinize = []
disable-projection = []

[dependencies]
ariadne = "0.3"
bit-set = "0.5"
chumsky = "0.9"
clap = { version = "4.4", features = ["derive"] }
cudd-sys = "1.0"
hashbrown = { version = "0.14", features = ["raw"] }
im = "15.1"
indexmap = { version = "2.0", features = ["serde"] }
quick-xml = { version = "0.34", features = ["serialize"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.17"
