[package]
name = "pyo3-generic-wrap-example"
version = "0.1.0"
authors = ["Maximilian Köhl <koehl@cs.uni-saarland.de>"]
edition = "2018"
license = "MIT"
publish = false

[lib]
name = "pyo3_generic_wrap_example"
crate-type = ["cdylib"]

[dependencies]
pyo3-generic-wrap = { path = "../" }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]